fix double scrollbar issue

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+:root {
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100vh;
